Minio_task/Hard/cluster/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app  : minio
    env  : prod
    owner: NikitaGrigorev
  annotations:
    last_modified_date : 20.02.2023
    responsible_release: "Nikita Grigorev"
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: minio-console
      port: 9001
      targetPort: 9001
      protocol: TCP
    - name: minio-api
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app    : minio
    env    : prod
    enable : 'true'
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  labels:
    app  : minio
    env  : prod
    owner: NikitaGrigorev
  annotations:
    last_modified_date : 20.02.2023
    responsible_release: "Nikita Grigorev"
spec:
  selector:
    app    : minio
    env    : prod
    enable : 'true'
  ports:
  - name: minio-console
    protocol: TCP
    port: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  labels:
    app  : minio
    env  : prod
    owner: NikitaGrigorev
  annotations:
    last_modified_date : 20.02.2023
    responsible_release: "Nikita Grigorev"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  rules:
   - host: www.modon.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app  : minio
    env  : prod
    owner: NikitaGrigorev
  annotations:
    last_modified_date : 20.02.2023
    responsible_release: "Nikita Grigorev"
spec:
  serviceName: minio # Должно быть равно metadata.name безголового сервиса, иначе pod'ы друг друга не увидят!!!!
  replicas: 2
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app    : minio
      env    : prod
      enable : 'true'
  template:
    metadata:
      labels:
        app    : minio
        env    : prod
        enable : 'true'
        owner  : NikitaGrigorev
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args: ["server"]
          ports:
          - name: minio-console
            containerPort: 9001
            protocol: TCP
          - name: minio-api
            containerPort: 9000
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: "HTTP"
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: "HTTP"
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              memory: "1000Mi"
              cpu: "1000m"
            limits:
              memory: "1500Mi"
              cpu: "1500m"
          volumeMounts:
          - name: minio-pvc
            mountPath: /data
      # volumes: # на случай быстрой проверки без создания дисков
      #   - name: minio-pvc
      #     emptyDir:
      #       sizeLimit: 4000Mi
  volumeClaimTemplates: # при запуске имеются проблемы с файловой системой tmpfs, поэтому нужно создавать отдельные диски, или не использовать PVC
  - metadata:
      name: minio-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standart"
      resources:
        requests:
          storage: 10Gi
